src/test/deca/context/invalid/created/test_invalid_cond.deca

{
    boolean b;
    boolean c;

    // la condition doit être boolean 
    if (5) {
        println("Test");
    }

    // la  condition doit être boolean 
    while (42) {
        println("Boucle");
    }

    
    b = true && 5; 

   
    c = "abc" < 5; 
}